--- a/tao-class2/classification_16bit.ipynb
+++ b/tao-class2/classification_16bit.ipynb
@@ -33,8 +33,7 @@
     "### Table of Contents\n",
     "This notebook shows an example use case for classification using the Train Adapt Optimize (TAO) Toolkit.\n",
     "\n",
-    "0. [Set up env variables and map drives](#head-0)\n",
-    "1. [Installing the TAO Launcher](#head-1)\n",
+    "1. [Set up env variables ](#head-1)\n",
     "2. [Prepare dataset and pretrained model](#head-2)\n",
     "    1. [Split the dataset into train/test/val](#head-2-1)\n",
     "    2. [Download pre-trained model](#head-2-2)\n",
@@ -44,16 +43,14 @@
     "6. [Prune trained models](#head-6)\n",
     "7. [Retrain pruned models](#head-7)\n",
     "8. [Testing the model](#head-8)\n",
-    "9. [Visualize inferences](#head-9)\n",
-    "10. [Export and Deploy!](#head-10)\n",
-    "11. [Verify the deployed model](#head-11)"
+    "9. [Visualize inferences](#head-9)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Set up env variables and map drives <a class=\"anchor\" id=\"head-0\"></a>\n",
+    "## 1. Set up env variables and map drives <a class=\"anchor\" id=\"head-0\"></a>\n",
     "When using the purpose-built pretrained models from NGC, please make sure to set the `$KEY` environment variable to the key as mentioned in the model overview. Failing to do so, can lead to errors when trying to load them as pretrained models.\n",
     "\n",
     "The following notebook requires the user to set an env variable called the `$LOCAL_PROJECT_DIR` as the path to the users workspace. Please note that the dataset to run this notebook is expected to reside in the `$LOCAL_PROJECT_DIR/data`, while the TAO experiment generated collaterals will be output to `$LOCAL_PROJECT_DIR/classification`. More information on how to set up the dataset and the supported steps in the TAO workflow are provided in the subsequent cells.\n",
@@ -105,12 +102,7 @@
     "import os\n",
     "\n",
     "%env KEY=nvidia_tlt\n",
-    "#%env NUM_GPUS=1\n",
-    "#%env USER_EXPERIMENT_DIR=/workspace/tao-experiments/classification_16bit\n",
-    "#%env DATA_DOWNLOAD_DIR=/workspace/tao-experiments/data\n",
-    "\n",
-    "# Set this path if you don't run the notebook from the samples directory.\n",
-    "# %env NOTEBOOK_ROOT=~/tao-samples/classification\n",
+    "%env NUM_GPUS=1\n",
     "\n",
     "# Please define this local project directory that needs to be mapped to the TAO docker session.\n",
     "# The dataset expected to be present in $LOCAL_PROJECT_DIR/data, while the results for the steps\n",
@@ -614,23 +606,6 @@
     "* Validation dataset\n",
     "* Pre-trained models\n",
     "* Other training (hyper-)parameters such as batch size, number of epochs, learning rate etc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/notebooks/tao_launcher_starter_kit/classification_tf2/tao_voc\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
    ]
   },
   {
@@ -6150,150 +6125,6 @@
    "metadata": {},
    "source": [
     "As explained in Getting Started Guide, this outputs a results.csv file in the same directory. We can use a simple python program to see the visualize the output of csv file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 10. Export and Deploy! <a class=\"anchor\" id=\"head-10\"></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Log file already exists at /home/jupyter/notebooks/tao_launcher_starter_kit/classification_tf2/classification_16bit/output_16bit_retrain/status.json\n",
-      "Starting classification export.\n",
-      "Signatures found in model: [serving_default].\n",
-      "Output names: ['predictions']\n",
-      "Using tensorflow=2.9.1, onnx=1.12.0, tf2onnx=1.12.0/ddca3a\n",
-      "Using opset <onnx, 13>\n",
-      "Computed 0 values for constant folding\n",
-      "Optimizing ONNX model\n",
-      "After optimization: BatchNormalization -42 (49->7), Cast -1 (33->32), Const -378 (569->191), GlobalAveragePool +16 (0->16), Identity -2 (2->0), ReduceMean -16 (16->0), Reshape -16 (33->17), Transpose -17 (17->0), Unsqueeze -64 (64->0)\n",
-      "The etlt model is saved at /home/jupyter/notebooks/tao_launcher_starter_kit/classification_tf2/classification_16bit/export/efficientnet-b0.etlt\n",
-      "Export finished successfully.\n",
-      "Sending telemetry data.\n",
-      "Telemetry data couldn't be sent, but the command ran successfully.\n",
-      "[Error]: <urlopen error [Errno -2] Name or service not known>\n",
-      "Execution status: PASS\n"
-     ]
-    }
-   ],
-   "source": [
-    "!mkdir -p $LOCAL_EXPERIMENT_DIR/export\n",
-    "\n",
-    "!sed -i \"s|EXPORTDIR|$LOCAL_EXPERIMENT_DIR/export|g\" $LOCAL_SPECS_DIR/spec_retrain_16bit_imgs.yaml\n",
-    "!classification_tf2 export -e $LOCAL_SPECS_DIR/spec_retrain_16bit_imgs.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 5964\n",
-      "-rw-r--r-- 1 jupyter jupyter 6104198 Jan 18 21:49 efficientnet-b0.etlt\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check if etlt model is correctly saved.\n",
-    "!ls -l $LOCAL_EXPERIMENT_DIR/export"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using the `tao-deploy` container, you can generate a TensorRT engine and verify the correctness of the generated through evaluate and inference.\n",
-    "\n",
-    "The `tao-deploy` produces optimized tensorrt engines for the platform that it resides on. Therefore, to get maximum performance, please run `tao-deploy` command which will instantiate a deploy container, with the exported `.etlt` file on your target device. The `tao-deploy` container only works for x86, with discrete NVIDIA GPU's.\n",
-    "\n",
-    "For the jetson devices, please download the tao-converter for jetson and refer to [here](https://docs.nvidia.com/tao/tao-toolkit/text/tensorrt.html#installing-the-tao-converter) for more details.\n",
-    "\n",
-    "If you choose to integrate your model into deepstream directly, you may do so by simply copying the exported `.etlt` file along with the calibration cache to the target device and updating the spec file that configures the `gst-nvinfer` element to point to this newly exported model. Usually this file is called `config_infer_primary.txt` for detection models and `config_infer_secondary_*.txt` for classification models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: tao-deploy: command not found\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Convert to TensorRT engine (FP32).\n",
-    "!tao-deploy classification_tf2 gen_trt_engine -e $LOCAL_SPECS_DIR/spec_retrain_16bit_imgs.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert to TensorRT engine (INT8).\n",
-    "!sed -i \"s|fp32|int8|g\" $LOCAL_SPECS_DIR/spec_retrain_16bit_imgs.yaml\n",
-    "!tao-deploy classification_tf2 gen_trt_engine -e $SPECS_DIR/spec_retrain_16bit_imgs.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Exported model:')\n",
-    "print('------------')\n",
-    "!ls -lh $LOCAL_EXPERIMENT_DIR/export/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 11. Verify the deployed model <a class=\"anchor\" id=\"head-11\"></a>\n",
-    "\n",
-    "Verify the converted engine by visualizing TensorRT inferences."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set engine as model_path\n",
-    "!sed -i \"s|$USER_EXPERIMENT_DIR/output_16bit_retrain/weights/$LAST_CHECKPOINT|$USER_EXPERIMENT_DIR/export/efficientnet-b0.fp32.engine|g\" $LOCAL_SPECS_DIR/spec_retrain_16bit_imgs.yaml\n",
-    "!sed -i \"s|batch_size: 256|batch_size: 16|g\" $LOCAL_SPECS_DIR/spec_retrain_16bit_imgs.yaml\n",
-    "# Running inference \n",
-    "!tao-deploy classification_tf2 inference -e $SPECS_DIR/spec_retrain_16bit_imgs.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat $LOCAL_EXPERIMENT_DIR/output_16bit_retrain/result.csv"
    ]
   }
  ],
