--- a/classification_tf2-final/classification-deploy.ipynb
+++ b/classification_tf2-final/classification-deploy.ipynb
@@ -5,37 +5,27 @@
    "metadata": {},
    "source": [
     "## Learning Objectives\n",
-    "In this notebook, you will learn how to Use the pruned and retrained model in \"classification.ipynb\" notebook which was exported as a .etlt file for deployment to DeepStream. First, You need to run the \"classification.ipynb\" notebook to create the export file. TThen, Go through this notebook. To run this notebook you have 2 options:\n",
-    "1. Use the quick deploy option\n",
-    "2. Run the notebook inside tao-toolkit:4.0.0-tf2.9.1 container\n",
-    "\n",
-    "\n",
-    "1. docker run -it --rm --gpus all -v /path/to/notebooks:/workspace/tao --net=host nvcr.io/nvidia/tao/tao-toolkit:4.0.0-tf2.9.1 /bin/bash\n",
-    "\n",
-    "2. Pip3 install notebook\n",
-    " \n",
-    "3. Pip3 install jupyterlab\n",
-    " \n",
-    "4. cd /workspace\n",
-    " \n",
-    " 5. jupyter notebook --ip 0.0.0.0 --port 8888 --allow-root\n",
-    "\n",
-    "\n",
+    "In this notebook, you will learn how to Use the pruned and retrained model in \"classification.ipynb\" notebook which was exported as a .etlt file for deployment to DeepStream. First, You need to run the \"classification.ipynb\" notebook using quick deploy option or inside tao-toolkit:4.0.0-tf2.9.1 container to create the export file for this model. Then, Go through this notebook. \n",
     "\n",
     "## TAO Deploy Container\n",
     "Using the tao-deploy container, you can generate a TensorRT engine and verify the correctness of the generated through evaluate and inference.\n",
     "\n",
     "The tao-deploy produces optimized tensorrt engines for the platform that it resides on. Therefore, to get maximum performance, please run tao-deploy command which will instantiate a deploy container, with the exported .etlt file on your target device. The tao-deploy container only works for x86, with discrete NVIDIA GPU's.\n",
     " \n",
-    "**Use the following commands to run this notebook inside deploy container:**\n",
+    "**Use the following commands to run this notebook inside the deploy container:**\n",
     "\n",
-    "docker run -it --rm --gpus all -v /path/to/notebooks:/workspace/tao --net=host nvcr.io/nvidia/tao/tao-toolkit:4.0.0-deploy/bin/bash\n",
+    "```\n",
+    "docker run -it --rm --gpus all -v /path/to/notebooks:/workspace/tao --net=host nvcr.io/nvidia/tao/tao-toolkit:4.0.0-tao-toolkit:4.0.0-deploy /bin/bash\n",
     "\n",
-    "Pip3 install notebook\n",
-    "Pip3 install jupyterlab\n",
+    "pip3 install notebook\n",
+    "\n",
+    "pip3 install jupyterlab\n",
+    "\n",
+    "cd /workspace\n",
     "\n",
     "jupyter notebook --ip 0.0.0.0 --port 8888 --allow-root\n",
     "\n",
+    "```\n",
     "\n",
     "For the jetson devices, please download the tao-converter for jetson and refer to here for more details.\n",
     "\n",
@@ -45,8 +35,8 @@
     "### Table of Contents\n",
     "This notebook shows an example use case for classification using the Train Adapt Optimize (TAO) Toolkit.\n",
     "\n",
-    "1. [Set up env variables and map drives](#head-1)\n",
-    "2. [Prepare dataset and pretrained model](#head-2)\n",
+    "1. [Set up env variables](#head-1)\n",
+    "2. [Prepare dataset](#head-2)\n",
     "    1. [Split the dataset into train/test/val](#head-2-1)\n",
     "    2. [Installing NGC CLI](#head-2-2)\n",
     "\n",
@@ -59,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Set up env variables and map drives <a class=\"anchor\" id=\"head-0\"></a>\n",
+    "## 1. Set up env variables <a class=\"anchor\" id=\"head-0\"></a>\n",
     "When using the purpose-built pretrained models from NGC, please make sure to set the `$KEY` environment variable to the key as mentioned in the model overview. Failing to do so, can lead to errors when trying to load them as pretrained models.\n",
     "\n",
     "The following notebook requires the user to set an env variable called the `$LOCAL_PROJECT_DIR` as the path to the users workspace. Please note that the dataset to run this notebook is expected to reside in the `$LOCAL_PROJECT_DIR/data`, while the TAO experiment generated collaterals will be output to `$LOCAL_PROJECT_DIR/classification_tf2`. More information on how to set up the dataset and the supported steps in the TAO workflow are provided in the subsequent cells.\n",
@@ -129,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Prepare datasets and pre-trained model <a class=\"anchor\" id=\"head-2\"></a>"
+    "## 2. Prepare datasets <a class=\"anchor\" id=\"head-2\"></a>"
    ]
   },
   {
@@ -3890,7 +3880,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3904,7 +3894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   },
   "vscode": {
    "interpreter": {
